--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <a href="#es">Español</a> •
           <a href="#fr">Français</a> •
           <a href="#de">Deutsch</a> •
+          <a href="#da">Dansk</a> •
           <a href="#pt-br">Português</a> •
           <a href="#it">Italiano</a> •
           <a href="#pl">Polski</a> •
